fix iPad overflow-x bug

--- a/src/mp-app/mp-app.styl
+++ b/src/mp-app/mp-app.styl
@@ -10,6 +10,9 @@ main
   overflow-y auto
   display flex
   flex-direction: column
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 
 nav
   width 100%
@@ -125,13 +128,13 @@ footer > *
   $$text-font-size-mobile-styles()        
 
   nav ul
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-wrap: wrap;
     width 100%
 
   nav ul li
     padding 0
-    margin var(--mp-size--3)
-  
+    margin var(--mp-size--3) 0
+
   nav ul li a
     font-size: var(--mp-text-c1-mobile-font-size); 
